Assignment part 2 for checking available limit and balance